fix: Limit overflow:hidden to Museum page to allow scrolling on Home LP

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #root {
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
